# RAGprobe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ragprobe.yml
docs/: phase_v0.1.md  phase_v0.2.md  phase_v0.3.md
examples/contract/: README.md  chunks.jsonl  endpoint_config.json  experiment.json  http_retriever_server.py  node_jsonl_retriever.js  python_retriever.py  testset.json  weak_python_retriever.py
qualira/: __init__.py  __main__.py
qualira/backends/: base.py  sqlite.py
qualira/cli/: eval.py  ingest.py  query.py
qualira/core/: __init__.py  schema.py
qualira/eval/: benchmark.py  metrics.py
qualira/eval/baselines/: __init__.py  naive_chunk.py
qualira/retrieval/: __init__.py  executor.py
src/ragprobe/: __init__.py  __main__.py  api.py
src/ragprobe/cli/: main.py
src/ragprobe/core/: __init__.py  analyzer.py  audit.py  baseline.py  checks.py  classifier.py  compare.py  confusion.py  experiment.py  generator.py  issues.py  llm_generation.py  matching.py  models.py  recommendations.py  repair.py  runner.py  schema.py  validation.py
src/ragprobe/data/contract/: results_v1.json  results_v2.json  testset.json
src/ragprobe/io/: __init__.py  jsonl.py
src/ragprobe/reports/: __init__.py  markdown.py  terminal.py
tests/: __init__.py  test_boundary.py
tests/fixtures/: chunks.jsonl  contract_evidence.json  contract_queries.json  contract_queries_heldout.json  contract_testset.json  endpoint_config.json  import_results.jsonl  jsonl_retriever.py  results_v1.json  results_v2.json  results_without_ids.json  retriever_with_ids.py  retriever_without_ids.py  retriever_without_scores.py
tests/unit/: test_phase0_imports.py  test_pipeline.py  test_v01_analyzer.py  test_v01_cli.py  test_v02_cli.py  test_v02_runner.py  test_v03_generator.py  test_v04_diagnosis.py  test_v05_quality.py  test_v06_release_polish.py  test_v07_llm_generation.py  test_v07_python_api.py  test_v08_experiment.py  test_v09_audit.py  test_v10_repair.py  test_v10_stable_schema.py  test_v12_baseline.py  test_v13_confusion.py
