[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ragprobe"
version = "0.9.0"
description = "Retrieval diagnostics for RAG systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RAGProbe contributors" }
]
keywords = ["rag", "retrieval", "evaluation", "diagnostics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/wangmengxxxi/RAGprobe"
Documentation = "https://github.com/wangmengxxxi/RAGprobe#readme"
Issues = "https://github.com/wangmengxxxi/RAGprobe/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
ragprobe = "ragprobe.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ragprobe"]

[tool.hatch.build.targets.wheel.force-include]
"src/ragprobe/data" = "ragprobe/data"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
